feat:finished first two lessons of Advanced React Patterns course section

--- a/src/exercise/01.md
+++ b/src/exercise/01.md
@@ -4,6 +4,10 @@
 
 Elaborate on your learnings here in `src/exercise/01.md`
 
+This is a very useful pattern to abstract the user of a library/component when they would need to make a series of calls to a dispatcher in a particular order for the library/component to be used correctly. This lowers the probability of the user using the library/component in an unintended manner, or in an erroneous manner, for instance, if the library/component gets updated, our reducer actions' types get updated, so the action's types previously dispatched by the library/component are now wrong.
+
+I would have never thought of passing the dispatcher as an argument to the helper functions, but Dan Abramov's tweet helped understand why that is a better approach. 
+
 ## Background
 
 **One liner:** The Context Module Functions Pattern allows you to encapsulate a
@@ -190,8 +194,8 @@ I wouldn't recommend this all the time, but sometimes it can be a help!
 
 📜 If you need to review the context API, here are the docs:
 
-- https://reactjs.org/docs/context.html
-- https://reactjs.org/docs/hooks-reference.html#usecontext
+- [https://reactjs.org/docs/context.html](https://reactjs.org/docs/context.html)
+- [https://reactjs.org/docs/hooks-reference.html#usecontext](https://reactjs.org/docs/hooks-reference.html#usecontext)
 
 🦉 Tip: You may notice that the context provider/consumers in React DevTools
 just display as `Context.Provider` and `Context.Consumer`. That doesn't do a
