--- a/src/exercise/02.md
+++ b/src/exercise/02.md
@@ -4,6 +4,8 @@
 
 Elaborate on your learnings here in `src/exercise/02.md`
 
+I learnt about some of the tools React provides us to work with a component's children, so that I can build my own composed components with React.
+
 ## Background
 
 **One liner:** The Compound Components Pattern enables you to provide a set of
