feat: finished fourth Epic react course section

--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -4,6 +4,8 @@
 
 Elaborate on your learnings here in `src/exercise/04.md`
 
+I learnt how to properly expose properties to use together with a custom hook to make the APIs user's life easier.
+
 ## Background
 
 **One liner:** The Prop Collections and Getters Pattern allows your hook to
