--- a/src/exercise/05.md
+++ b/src/exercise/05.md
@@ -4,6 +4,8 @@
 
 Elaborate on your learnings here in `src/exercise/05.md`
 
+I learnt about Inversion of Control, which is a powerful principle to open the backdoor to API users in order to make that API as flexible as possible. However, with great power comes great responsibility.
+
 ## Background
 
 **One liner:** The State Reducer Pattern inverts control over the state
