--- a/src/exercise/06.md
+++ b/src/exercise/06.md
@@ -4,6 +4,8 @@
 
 Elaborate on your learnings here in `src/exercise/06.md`
 
+I learnt how to give even more control to the user of a React component by giving such a user the possibility of managing not only how, but when the state of the component is updated.
+
 ## Background
 
 **One liner:** The Control Props pattern allows users to completely control
@@ -20,7 +22,7 @@ Props."
 
 This concept is basically the same as controlled form elements in React that
 you've probably used many times: 📜
-https://reactjs.org/docs/forms.html#controlled-components
+[https://reactjs.org/docs/forms.html#controlled-components](https://reactjs.org/docs/forms.html#controlled-components)
 
 ```javascript
 function MyCapitalizedInput() {
