--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -4,6 +4,10 @@
 
 Elaborate on your learnings here in `src/exercise/03.md`
 
+I learnt how to use React Context to build a component that needs to share some variables with its children components, but does not know the depth at which they will be placed in the children component's tree.
+
+It is great to put to use the concepts learnt about React Context in the previous course section (Advanced React Hooks) in a real world use case.
+
 ## Background
 
 **One liner:** The Flexible Compound Components Pattern only differs from the
